<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--here is the title-->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/calculations_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!--about the area-->
        <TextView
            android:id="@+id/textViewAreaTitle"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="16dp"
            android:text="@string/area_of_a_rectangle"
            android:textColor="#3A50CA"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAreaFormula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="16dp"
            android:text="@string/area_formula" />

        <!-- about the perimeter -->

        <ImageView
            android:id="@+id/imageViewArea"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/_38032570_404485509116910_2715538329592405177_n" />

        <TextView
            android:id="@+id/textViewPerimeterTitle"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="16dp"
            android:text="@string/perimeter_of_a_rectangle"
            android:textColor="#3A50C9"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPerimeterFormula"
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:fontFamily="sans-serif-medium"
            android:padding="16dp"
            android:text="@string/perimeter_formula" />

        <ImageView
            android:id="@+id/imageViewPerimeter"
            android:layout_width="387dp"
            android:layout_height="191dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/_38246376_445802138123728_2071764570507342375_n" />

    </LinearLayout>
</ScrollView>