<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/what_is_rectangle"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp"
                android:text="@string/rectangle_description" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="385dp"
                android:layout_height="163dp"
                app:srcCompat="@drawable/_38223322_1181664102826461_2340129838932288084_n" />

            <TextView
                android:id="@+id/textViewExamplesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/rectangles_around_us"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewExamples"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp"
                android:text="@string/rectangle_examples" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                app:srcCompat="@drawable/_38223422_1337192783615509_4452872079771054369_n" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>